# angular-tour-of-heroes

./: .bazelrc  WORKSPACE  package-lock.json  package.json  tsconfig.json
src/: BUILD.bazel
src/app/: BUILD.bazel
